syntax = "proto3";
option go_package = "pb/gen";

import "google/protobuf/timestamp.proto";
import "validator.proto";

package ukama.subscriber_registry.v1;

service SubscriberRegistryService {
    rpc Get (GetSubscriberRequest) returns (GetSubscriberResponse) {}
    rpc Add (AddSubscriberRequest) returns (AddSubscriberResponse){}
    rpc Update(UpdateSubscriberRequest) returns (UpdateSubscriberResponse){}
    rpc Delete (DeleteSubscriberRequest) returns (DeleteSubscriberResponse){}
    rpc GetByNetwork(GetByNetworkRequest) returns(GetByNetworkResponse){}
    rpc ListSubscribers(ListSubscribersRequest) returns(ListSubscribersResponse){}
}
message ListSubscribersRequest{  
}
message ListSubscribersResponse{
    repeated Subscriber subscribers  = 1;
}
message DeleteSubscriberRequest{
    string subscriberID = 1 [(validator.field) = {uuid_ver: 0, string_not_empty: true}, json_name = "subscriber_id"];
}
message GetByNetworkRequest{
    string networkID = 1 [(validator.field) = {uuid_ver: 0, string_not_empty: true}, json_name = "network_id"];

}
message GetByNetworkResponse{
    repeated Subscriber subscribers  = 1;
}
message DeleteSubscriberResponse{
    string subscriberID = 1;

}
message GetSubscriberRequest{
    string subscriberID = 1 [(validator.field) = {uuid_ver: 0, string_not_empty: true}, json_name = "subscriber_id"];
}
message GetSubscriberResponse{
    Subscriber subscriber  = 1;
}

message AddSubscriberRequest{
    string firstName = 1 [(validator.field) = { string_not_empty: true,  length_gt: 1 }];
    string lastName = 2 [(validator.field) = { string_not_empty: true,  length_gt: 1 }];
    string email = 3  [(validator.field) = { human_error:"must be an email format" regex: "^$|^[a-z0-9._%+\\-]+@[a-z0-9.\\-]+\\.[a-z]{2,4}$"}];
    string phoneNumber = 4  [(validator.field) = { human_error:"must be a phone number format", regex: "^$|^(?:(?:\\(?(?:00|\\+)([1-4]\\d\\d|[1-9]\\d?)\\)?)?[\\-\\.\\ \\\\\\/]?)?((?:\\(?\\d{1,}\\)?[\\-\\.\\ \\\\\\/]?){0,})(?:[\\-\\.\\ \\\\\\/]?(?:#|ext\\.?|extension|x)[\\-\\.\\ \\\\\\/]?(\\d+))?$"}];
    string address  = 5; 
    string idSerial =6;
    string networkID = 7 [(validator.field) = {uuid_ver: 0, string_not_empty: true}, json_name = "network_id"];
    string orgID = 8 [(validator.field) = {uuid_ver: 0, string_not_empty: true}, json_name = "org_id"];
    string proofOfIdentification =9 [(validator.field) = { string_not_empty: true,  length_gt: 1 }];
    google.protobuf.Timestamp dateOfBirth = 10;
    string gender =11 [(validator.field) = { string_not_empty: true,  length_gt: 1 }];
}
message UpdateSubscriberRequest{
    string subscriberID = 1 [(validator.field) = {uuid_ver: 0, string_not_empty: true}, json_name = "subscriber_id"];
    string email = 4  [(validator.field) = { human_error:"must be an email format" regex: "^$|^[a-z0-9._%+\\-]+@[a-z0-9.\\-]+\\.[a-z]{2,4}$"}];
    string phoneNumber = 5  [(validator.field) = { human_error:"must be a phone number format", regex: "^$|^(?:(?:\\(?(?:00|\\+)([1-4]\\d\\d|[1-9]\\d?)\\)?)?[\\-\\.\\ \\\\\\/]?)?((?:\\(?\\d{1,}\\)?[\\-\\.\\ \\\\\\/]?){0,})(?:[\\-\\.\\ \\\\\\/]?(?:#|ext\\.?|extension|x)[\\-\\.\\ \\\\\\/]?(\\d+))?$"}];
    string address  = 6; 
    string idSerial =8;
    string proofOfIdentification =11;
}
message UpdateSubscriberResponse{
    string email = 4  [(validator.field) = { human_error:"must be an email format" regex: "^$|^[a-z0-9._%+\\-]+@[a-z0-9.\\-]+\\.[a-z]{2,4}$"}];
    string phoneNumber = 5  [(validator.field) = { human_error:"must be a phone number format", regex: "^$|^(?:(?:\\(?(?:00|\\+)([1-4]\\d\\d|[1-9]\\d?)\\)?)?[\\-\\.\\ \\\\\\/]?)?((?:\\(?\\d{1,}\\)?[\\-\\.\\ \\\\\\/]?){0,})(?:[\\-\\.\\ \\\\\\/]?(?:#|ext\\.?|extension|x)[\\-\\.\\ \\\\\\/]?(\\d+))?$"}];
    string address  = 6; 
    string idSerial =8;
    string proofOfIdentification =11;
}
message AddSubscriberResponse{
    Subscriber Subscriber = 1;

}
message Subscriber{
    string firstName  = 1;
    string lastName = 2;
    string subscriberID = 3 [json_name = "subscriber_id"];
    string networkID = 4;
    string orgID = 5 [(validator.field) = {uuid_ver: 0, string_not_empty: true}, json_name = "org_id"];
    string email  = 6;
    string phoneNumber  = 7;
    string address  = 8; 
    string proofOfIdentification =9;
    string created_at = 10;
    string deleted_at = 11;
    string updated_at = 12;
    repeated Sim sim = 13;
    string date_of_birth = 14;
    string idSerial =15;
    string gender =16;
}
message Package {
    string id = 1 [(validator.field) = {uuid_ver: 0, string_not_empty: true}, json_name = "id"];
    google.protobuf.Timestamp startDate = 2 [json_name = "start_date"];
    google.protobuf.Timestamp endDate = 3 [json_name = "end_date"];
}
message Sim {
    string id = 1 [(validator.field) = {uuid_ver: 0, string_not_empty: true}, json_name = "id"];
    string subscriberID = 2 [(validator.field) = {uuid_ver: 0, string_not_empty: true}, json_name = "subscriber_id"];
    string networkID = 3 [(validator.field) = {uuid_ver: 0, string_not_empty: true}, json_name = "network_id"];
    string orgID = 4 [(validator.field) = {uuid_ver: 0, string_not_empty: true}, json_name = "org_id"];
    Package package = 5;
    string iccid = 6;
    string msisdn = 7  [(validator.field) = { human_error:"must be a phone number format", regex: "^$|^(?:(?:\\(?(?:00|\\+)([1-4]\\d\\d|[1-9]\\d?)\\)?)?[\\-\\.\\ \\\\\\/]?)?((?:\\(?\\d{1,}\\)?[\\-\\.\\ \\\\\\/]?){0,})(?:[\\-\\.\\ \\\\\\/]?(?:#|ext\\.?|extension|x)[\\-\\.\\ \\\\\\/]?(\\d+))?$"}];
    string imsi = 8;
    string type = 9;
    string status = 10;
    bool isPhysical = 11 [json_name = "is_physical"];
    google.protobuf.Timestamp firstActivatedOn = 12;
    google.protobuf.Timestamp lastActivatedOn = 13 ;
    uint64 activationsCount = 14;
    uint64 deactivationsCount = 15;
    google.protobuf.Timestamp allocatedAt = 16 [json_name = "allocated_at"];

}
